--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,7 @@ h6 {
     transition: 0.3s;
     color: #fff;
     background: #ff712b;
-    box-shadow: 5px 8px 28px #ff712b;
+    box-shadow: 1px 1px 6px #ff712b;
     margin-right: 20px; /* Add margin to the right of the button */
 }
 
@@ -416,15 +416,15 @@ h6 {
 
 
 #hero .btn-get-started:hover {
-    background: white;
-    color: #ff712b;
-    box-shadow: 0 8px 28px #ffffff;
+    background: #ff5500;
+    color: #ffffff;
+    box-shadow: 1px 1px 8px #ffffff;
 }
 
 #hero .btn-secondary:hover {
-    background: white;
-    color: #ff712b;
-    box-shadow: 0 8px 28px #ffffff;
+    /* background: #444444; */
+    color: #fffff;
+    box-shadow: 1px 1px 8px #ffffff;
 }
 
 
@@ -1007,7 +1007,6 @@ button[type="submit"]:hover {
 
 .modal-content {
     background-color: white;
-    color: #ff712b;
     margin: 15% auto;
     padding: 20px;
     border-radius: 8px;
