--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -786,7 +786,7 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 101%;
     background-color: #ff712b !important; /* Ensure background color is applied */
     color: white !important; /* Ensure text color is applied */
     padding: 15px 20px;
@@ -1069,6 +1069,7 @@ button[type="submit"]:hover {
     font-size: 16px;
     font-weight: normal;
     margin-bottom: 10px;
+    margin-left: 100px;
 }
 
 .about-text h1 {
