--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -446,7 +446,7 @@ h6 {
 
 @media (max-width: 768px) {
     #hero {
-        background-position: right;
+        background-position: -320px;
     }
     #hero h1 {
         font-size: 30px;
@@ -906,7 +906,6 @@ button.accordion-button {
     width: 86%;
     height: 10%;
     border-radius: 12px;
-    /* display: block; */
 }
 
 .contact-form {
@@ -1069,7 +1068,7 @@ button[type="submit"]:hover {
     font-size: 16px;
     font-weight: normal;
     margin-bottom: 10px;
-    margin-left: 100px;
+    margin-left: 80px;
 }
 
 .about-text h1 {
@@ -1220,7 +1219,7 @@ blockquote p {
 .footer-links {
     flex: 1;
     text-align: left;
-    padding-left: 210px;
+    padding-left: 150px;
 }
 
 .footer-links h4 {
