--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ h4,
 h5,
 h6 {
     font-family: "Plus Jakarta Sans", sans-serif;
+    /* font-weight: bold; */
 }
 
 
@@ -558,7 +559,40 @@ section {
 # About
 --------------------------------------------------------------*/
 
-.About {
+.WhoWeAre h2{
+    font-size: 36px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    color: #000000;
+    text-align: center;
+}
+
+.WhoWeArePara {
+    padding: 20px 20px 20px 20px;
+    text-align: center;
+    background-color: #ff712b;
+}
+
+.WhoWeArePara p {
+    font-size: 16px;
+    font-weight: 400px;
+    color: #ffffff;
+    margin-bottom: 0px;
+    max-width: 980px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    line-height: 55x;
+}
+@media only screen and (max-width: 768px) {
+    .WhoWeArePara p {
+        font-size: 14px;
+    }
+}
+
+
+
+/* .About {
     padding: 0;
 }
 
@@ -567,7 +601,6 @@ section {
     color: #5f687b;
     background: white;
     border-radius: 20px;
-    /* border: 1px solid #f9f9fa; */
     transition: 0.3s;
     height: 100%;
 }
@@ -589,8 +622,8 @@ section {
     font-size: 40px;
     margin: 0 auto;
     display: flex;
-    justify-content: center;  /* Center horizontally */
-    align-items: center;      /* Center vertically */
+    justify-content: center; 
+    align-items: center;     
 
 }
 
@@ -622,8 +655,8 @@ section {
 .icon-box img{
     margin: 0 auto;
     display: flex;
-    justify-content: center;  /* Center horizontally */
-    align-items: center;      /* Center vertically */
+    justify-content: center; 
+    align-items: center;      
     height: 80px;
     width: 80px;
 }
@@ -638,7 +671,7 @@ section {
     font-size: 14px;
     text-align: justify;
     color: #000000;
-}
+} */
 
 
 
@@ -703,7 +736,7 @@ section {
 }
 
 .content-box h3 {
-    background-color: #ff6b3b;
+    background-color: #ff712b;
     color: white;
     padding: 10px 15px;
     border-radius: 15px 15px 0 0;
@@ -853,7 +886,7 @@ button {
 
 /* Override Bootstrap's button styling specifically */
 button.accordion-button {
-    background-color: #ff6b3b !important;
+    background-color: #ff712b !important;
     color: white !important;
 }
 
@@ -1341,12 +1374,12 @@ blockquote p {
 ::-moz-selection {
     /* Code for Firefox */
     color: #ffffff;
-    background: #ff712b;
+    background: #ff5500;
 }
 
  ::selection {
     color: #ffffff;
-    background: #ff712b;
+    background: #ff5500;
 }
 
 
