--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ h6 {
     background: #fff;
     transition: all 0.5s;
     z-index: 997;
-    padding: 10px 0;
+    padding: 0px 0;
 }
 
 #header.header-scrolled {
@@ -103,6 +103,11 @@ h6 {
 
 #header .logo img {
     max-height: 40px;
+}
+
+
+#header .logo p{
+    font-size: 14px;
 }
 
 @media (max-width: 991px) {
